--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,3 +1,44 @@
 <section>
-    <app-filter></app-filter>
+  <section>
+    <div class="filter">
+      <form class="example-form">
+        <mat-form-field class="example-full-width">
+          <mat-label>Procurar...</mat-label>
+          <input
+            type="text"
+            placeholder="digite aqui..."
+            aria-label="text"
+            matInput
+            [formControl]="myControl"
+            (keyup)="onKey($event)"
+          />
+        </mat-form-field>
+      </form>
+      <button mat-button>
+        <mat-icon aria-hidden="false" aria-label="search icon">search</mat-icon>
+      </button>
+    </div>
+  </section>
+</section>
+<section>
+  <div class="content">
+    <div class="list" *ngFor="let item of repository">
+        <mat-list>
+            <mat-list-item (click)="openDialog(dialog)">
+                <h3>{{ item?.name }}</h3>
+                <ng-template #dialog>
+                    <mat-dialog-content class="mat-typography">
+                        <p>Descrição: {{ item?.description || 'Este repositório não possui descrição.' }}</p>
+                        <p>Criado em: {{ item?.created_at | date: 'dd/MM/yyyy' }}</p>
+                        <p>Última atualização: {{ item?.updated_at | date: 'dd/MM/yyyy' }}</p>
+                        <p>Criado por: {{ item?.owner?.login }}</p>
+                    </mat-dialog-content>
+                    <mat-dialog-actions align="end">
+                        <button mat-raised-button mat-dialog-close>Voltar</button>
+                    </mat-dialog-actions>
+                  </ng-template>
+            </mat-list-item>
+        </mat-list>
+    </div>
+  </div>
 </section>
