--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -15,7 +15,11 @@
   align-items: center;
 }
 
-.mat-focus-indicator, .mat-raised-button, .mat-button-base, .mat-primary, ._mat-animation-noopable {
+.mat-focus-indicator,
+.mat-raised-button,
+.mat-button-base,
+.mat-primary,
+._mat-animation-noopable {
   box-shadow: none !important;
 }
 
@@ -46,12 +50,19 @@
   background-color: #fff;
   border-radius: 1rem !important;
   width: 100%;
-  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),
+    0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
   margin-bottom: 1rem;
   height: 50px;
   cursor: pointer;
   font-size: 15px;
   font-weight: 400;
+}
+
+.spinner {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 4rem;
 }
 
 @media (max-width: 768px) {
